--- a/finetune/src/finetune.ipynb
+++ b/finetune/src/finetune.ipynb
@@ -5,6 +5,106 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from unsloth import FastLanguageModel\n",
+    "import torch\n",
+    "max_seq_length = 2048 # maximum number of tokens that the model can handle in a single input.\n",
+    "dtype = None # None for data type auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
+    "load_in_4bit = True # Use 4bit quantization to reduce memory usage. Can be False.\n",
+    "\n",
+    "# 4bit pre quantized models we support for 4x faster downloading + no Out Of Memory issues (OOMs).\n",
+    "fourbit_models = [\n",
+    "    \"unsloth/Meta-Llama-3.1-8B-bnb-4bit\",      # Llama-3.1 2x faster\n",
+    "    \"unsloth/Meta-Llama-3.1-8B-Instruct-bnb-4bit\",\n",
+    "    \"unsloth/Meta-Llama-3.1-70B-bnb-4bit\",\n",
+    "    \"unsloth/Meta-Llama-3.1-405B-bnb-4bit\",    # 4bit for 405b!\n",
+    "    \"unsloth/Mistral-Small-Instruct-2409\",     # Mistral 22b 2x faster!\n",
+    "    \"unsloth/mistral-7b-instruct-v0.3-bnb-4bit\",\n",
+    "    \"unsloth/Phi-3.5-mini-instruct\",           # Phi-3.5 2x faster!\n",
+    "    \"unsloth/Phi-3-medium-4k-instruct\",\n",
+    "    \"unsloth/gemma-2-9b-bnb-4bit\",\n",
+    "    \"unsloth/gemma-2-27b-bnb-4bit\",            # Gemma 2x faster!\n",
+    "\n",
+    "    \"unsloth/Llama-3.2-1B-bnb-4bit\",           # NEW! Llama 3.2 models\n",
+    "    \"unsloth/Llama-3.2-1B-Instruct-bnb-4bit\",\n",
+    "    \"unsloth/Llama-3.2-3B-bnb-4bit\",\n",
+    "    \"unsloth/Llama-3.2-3B-Instruct-bnb-4bit\",\n",
+    "\n",
+    "    \"unsloth/Llama-3.3-70B-Instruct-bnb-4bit\" # NEW! Llama 3.3 70B!\n",
+    "] # More models at https://huggingface.co/unsloth\n",
+    "\n",
+    "\n",
+    "#Loading the Model \n",
+    "model, tokenizer = FastLanguageModel.from_pretrained(\n",
+    "    #Loads a pre-trained model along with its tokenizer.\n",
+    "    model_name = \"unsloth/Llama-3.2-3B-Instruct\", # or choose \"unsloth/Llama-3.2-1B-Instruct\"\n",
+    "    max_seq_length = max_seq_length,\n",
+    "    dtype = dtype,\n",
+    "    load_in_4bit = load_in_4bit,\n",
+    "    # token = \"hf_...\", # use one if using gated models like meta-llama/Llama-2-7b-hf\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add LoRA adapters so we only need to update 1 to 10% of all parameters! This techniques allow us to fine-tune large models efficiently by adjusting only a subset of parameters instead of the entire model, reducing computational cost and memory usage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'FastLanguageModel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m FastLanguageModel\u001b[38;5;241m.\u001b[39mget_peft_model(\n\u001b[1;32m      2\u001b[0m     model,\n\u001b[1;32m      3\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16\u001b[39m, \u001b[38;5;66;03m# Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     target_modules \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mk_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mv_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mo_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      5\u001b[0m                       \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgate_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mup_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdown_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m,],\n\u001b[1;32m      6\u001b[0m     lora_alpha \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16\u001b[39m,\n\u001b[1;32m      7\u001b[0m     lora_dropout \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;66;03m# Supports any, but = 0 is optimized\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     bias \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnone\u001b[39m\u001b[38;5;124m\"\u001b[39m,    \u001b[38;5;66;03m# Supports any, but = \"none\" is optimized\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# [NEW] \"unsloth\" uses 30% less VRAM, fits 2x larger batch sizes!\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     use_gradient_checkpointing \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munsloth\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;66;03m# True or \"unsloth\" for very long context\u001b[39;00m\n\u001b[1;32m     11\u001b[0m     random_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3407\u001b[39m,\n\u001b[1;32m     12\u001b[0m     use_rslora \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m,  \u001b[38;5;66;03m# We support rank stabilized LoRA\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     loftq_config \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;66;03m# And LoftQ\u001b[39;00m\n\u001b[1;32m     14\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'FastLanguageModel' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Use PEFT (Parameter-Efficient Fine-Tunning) on our selected model \n",
+    "model = FastLanguageModel.get_peft_model(\n",
+    "    model,\n",
+    "    # rank of the LoRA matrix. The rank determines the number of parameters added for adaptation.\n",
+    "    r = 16, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
+    "\n",
+    "    # which parts (modules) of the model to apply LoRA fine-tuning.\n",
+    "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
+    "                      \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
+    "\n",
+    "    lora_alpha = 16, #how much influence the fine-tuned weights have on the original model.\n",
+    "\n",
+    "    #Apply dropout to LoRA layers during fine-tuning to prevent overfitting\n",
+    "    lora_dropout = 0, # Supports any, but = 0 is optimized\n",
+    "\n",
+    "    bias = \"none\",    # Supports any, but = \"none\" is optimized\n",
+    "\n",
+    "    # [NEW] \"unsloth\" uses 30% less VRAM, fits 2x larger batch sizes!\n",
+    "    use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
+    "\n",
+    "    random_state = 3407, #seed for reproducibility, ensuring that results remain consistent across runs.\n",
+    "\n",
+    "    # Rank-Stabilized LoRA (RS-LoRA), which helps stabilize training when fine-tuning models with very high rank \n",
+    "    use_rslora = False,  #  disable support rank stabilized LoRA (default)\n",
+    "\n",
+    "    loftq_config = None, # And LoftQ\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -15,7 +115,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.11"
   }
  },
