--- a/finetune/src/finetune.ipynb
+++ b/finetune/src/finetune.ipynb
@@ -54,21 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'FastLanguageModel' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m FastLanguageModel\u001b[38;5;241m.\u001b[39mget_peft_model(\n\u001b[1;32m      2\u001b[0m     model,\n\u001b[1;32m      3\u001b[0m     r \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16\u001b[39m, \u001b[38;5;66;03m# Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     target_modules \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mk_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mv_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mo_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      5\u001b[0m                       \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgate_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mup_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdown_proj\u001b[39m\u001b[38;5;124m\"\u001b[39m,],\n\u001b[1;32m      6\u001b[0m     lora_alpha \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16\u001b[39m,\n\u001b[1;32m      7\u001b[0m     lora_dropout \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m, \u001b[38;5;66;03m# Supports any, but = 0 is optimized\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     bias \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnone\u001b[39m\u001b[38;5;124m\"\u001b[39m,    \u001b[38;5;66;03m# Supports any, but = \"none\" is optimized\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# [NEW] \"unsloth\" uses 30% less VRAM, fits 2x larger batch sizes!\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     use_gradient_checkpointing \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munsloth\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;66;03m# True or \"unsloth\" for very long context\u001b[39;00m\n\u001b[1;32m     11\u001b[0m     random_state \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m3407\u001b[39m,\n\u001b[1;32m     12\u001b[0m     use_rslora \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m,  \u001b[38;5;66;03m# We support rank stabilized LoRA\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     loftq_config \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;66;03m# And LoftQ\u001b[39;00m\n\u001b[1;32m     14\u001b[0m )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'FastLanguageModel' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Use PEFT (Parameter-Efficient Fine-Tunning) on our selected model \n",
@@ -105,12 +93,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from unsloth.chat_templates import get_chat_template\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "tokenizer = get_chat_template(\n",
+    "    tokenizer,\n",
+    "    chat_template = \"llama-3.2\",\n",
+    ")\n",
+    "\n",
+    "def formatting_prompts_func(examples):\n",
+    "    instructions = examples[\"instruction\"]\n",
+    "    inputs = examples[\"input\"]\n",
+    "    outputs = examples[\"output\"]\n",
+    "    \n",
+    "    texts = [\n",
+    "        tokenizer.apply_chat_template(\n",
+    "            {\n",
+    "                \"instruction\": instruction,\n",
+    "                \"input\": input_data,\n",
+    "                \"output\": output,\n",
+    "            },\n",
+    "            tokenize=False,\n",
+    "            add_generation_prompt=False,\n",
+    "        )\n",
+    "        for instruction, input_data, output in zip(instructions, inputs, outputs)\n",
+    "    ]\n",
+    "    return {\"text\": texts}\n",
+    "\n",
+    "dataset = load_dataset(\"json\", data_files=\"/Users/jabinwade/Coding/CareConnect/training_data/Diseases_Symptoms_training.jsonl\", split=\"train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unsloth.chat_templates import standardize_sharegpt\n",
+    "dataset = standardize_sharegpt(dataset)\n",
+    "dataset = dataset.map(formatting_prompts_func, batched = True,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset[5] [\"conversations\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset[5][\"text\"]"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "unsloth_env",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +170,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5c7b89af1651d0b8571dde13640ecdccf7d5a6204171d6ab33e7c296e100e08a"
+   }
   }
  },
  "nbformat": 4,
