First attempt at training. (pre bugfix)

--- a/finetune/src/finetune.ipynb
+++ b/finetune/src/finetune.ipynb
@@ -2,17 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "31608.49s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
+      "31618.20s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
+      "31623.88s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n",
+      "31630.06s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%capture\n",
+    "# Normally using pip install unsloth is enough\n",
+    "\n",
+    "# Temporarily as of Jan 31st 2025, Colab has some issues with Pytorch\n",
+    "# Using pip install unsloth will take 3 minutes, whilst the below takes <1 minute:\n",
+    "pip install --no-deps bitsandbytes accelerate xformers==0.0.29 peft trl triton\n",
+    "pip install --no-deps cut_cross_entropy unsloth_zoo\n",
+    "pip install sentencepiece protobuf datasets huggingface_hub hf_transfer\n",
+    "pip install --no-deps unsloth"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from unsloth import FastLanguageModel\n",
     "import torch\n",
-    "max_seq_length = 2048 # maximum number of tokens that the model can handle in a single input.\n",
-    "dtype = None # None for data type auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
+    "max_seq_length = 2048 # Choose any! We auto support RoPE Scaling internally!\n",
+    "dtype = None # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
     "load_in_4bit = True # Use 4bit quantization to reduce memory usage. Can be False.\n",
     "\n",
-    "# 4bit pre quantized models we support for 4x faster downloading + no Out Of Memory issues (OOMs).\n",
+    "# 4bit pre quantized models we support for 4x faster downloading + no OOMs.\n",
     "fourbit_models = [\n",
     "    \"unsloth/Meta-Llama-3.1-8B-bnb-4bit\",      # Llama-3.1 2x faster\n",
     "    \"unsloth/Meta-Llama-3.1-8B-Instruct-bnb-4bit\",\n",
@@ -33,10 +61,7 @@
     "    \"unsloth/Llama-3.3-70B-Instruct-bnb-4bit\" # NEW! Llama 3.3 70B!\n",
     "] # More models at https://huggingface.co/unsloth\n",
     "\n",
-    "\n",
-    "#Loading the Model \n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
-    "    #Loads a pre-trained model along with its tokenizer.\n",
     "    model_name = \"unsloth/Llama-3.2-3B-Instruct\", # or choose \"unsloth/Llama-3.2-1B-Instruct\"\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = dtype,\n",
@@ -89,6 +114,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DATA PROCESSING Section"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -99,7 +131,7 @@
     "\n",
     "tokenizer = get_chat_template(\n",
     "    tokenizer,\n",
-    "    chat_template = \"llama-3.2\",\n",
+    "    chat_template = \"llama-3.1\",\n",
     ")\n",
     "\n",
     "def formatting_prompts_func(examples):\n",
@@ -121,7 +153,7 @@
     "    ]\n",
     "    return {\"text\": texts}\n",
     "\n",
-    "dataset = load_dataset(\"json\", data_files=\"/Users/jabinwade/Coding/CareConnect/training_data/Diseases_Symptoms_training.jsonl\", split=\"train\")"
+    "dataset = load_dataset(\"json\", data_files=\"/home/jkwade/Code/CareConnect/processed_data/symptoms_diagnosis_data/Diseases_Symptoms_processed.jsonl\", split=\"train\")"
    ]
   },
   {
@@ -131,8 +163,9 @@
    "outputs": [],
    "source": [
     "from unsloth.chat_templates import standardize_sharegpt\n",
-    "dataset = standardize_sharegpt(dataset)\n",
-    "dataset = dataset.map(formatting_prompts_func, batched = True,)"
+    "\n",
+    "dataset = standardize_sharegpt(dataset) #Ensures the dataset is in a clean and consistent format\n",
+    "dataset = dataset.map(formatting_prompts_func, batched = True,) #Converts the standardized data into the final format expected by the LLaMA 3.2 chat template."
    ]
   },
   {
@@ -141,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset[5] [\"conversations\"]"
+    "dataset[5] [\"conversations\"] #  raw data for debugging or validation."
    ]
   },
   {
@@ -150,7 +183,187 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset[5][\"text\"]"
+    "dataset[5][\"text\"] # verify that the formatting and preprocessing worked as expected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training setup\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trl import SFTTrainer\n",
+    "from transformers import TrainingArguments, DataCollatorForSeq2Seq\n",
+    "from unsloth import is_bfloat16_supported\n",
+    "\n",
+    "trainer = SFTTrainer(\n",
+    "    model = model,  #model to finetune  (were using llama3.2)\n",
+    "    tokenizer = tokenizer, #selects our toenizer from the code block above\n",
+    "    train_dataset = dataset, #basially all this stuff in predefined in the blocks above just ctl+click \n",
+    "    dataset_text_field = \"text\",\n",
+    "    max_seq_length = max_seq_length,\n",
+    "    data_collator = DataCollatorForSeq2Seq(tokenizer = tokenizer),\n",
+    "    dataset_num_proc = 2,\n",
+    "    packing = False, # Can make training 5x faster for short sequences.\n",
+    "    args = TrainingArguments(# alright now it gets freaky \n",
+    "        per_device_train_batch_size = 2,    #each GPU processes two examples per bactch\n",
+    "        gradient_accumulation_steps = 4,    #  Simulates a batch size of 2 × 4 = 8 by accumulating gradients over 4 steps before updating weights.\n",
+    "        warmup_steps = 5,   #this will gradually increse the learning rate after the first 5 steps \n",
+    "        # num_train_epochs = 1, # Set this for 1 full training run.\n",
+    "        max_steps = 60, #only 5 steps of training \n",
+    "        learning_rate = 2e-4, # initial learning rate.\n",
+    "        fp16 = not is_bfloat16_supported(),\n",
+    "        bf16 = is_bfloat16_supported(),\n",
+    "        logging_steps = 1,  #logs training metrics  \n",
+    "        optim = \"adamw_8bit\",   #this is a optimizer with 8-bit weights. this is reduced for memory usage\n",
+    "        weight_decay = 0.01,    #this helps overfitting, applies a weight decay to regualize the model \n",
+    "        lr_scheduler_type = \"linear\",\n",
+    "        seed = 3407,    #Sets the random seed for reproducibility\n",
+    "        output_dir = \"outputs\",\n",
+    "        report_to = \"none\", # Use this for WandB etc\n",
+    "    ),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from unsloth.chat_templates import train_on_responses_only\n",
+    "trainer = train_on_responses_only(\n",
+    "    trainer,\n",
+    "    instruction_part = \"<|start_header_id|>user<|end_header_id|>\\n\\n\",\n",
+    "    response_part = \"<|start_header_id|>assistant<|end_header_id|>\\n\\n\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Very masking is done correctly "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.decode(trainer.train_dataset[5][\"input_ids\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "space = tokenizer(\" \", add_special_tokens = False).input_ids[0]\n",
+    "tokenizer.decode([space if x == -100 else x for x in trainer.train_dataset[5][\"labels\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Show Computer memory stats \n",
+    "gpu_stats = torch.cuda.get_device_properties(0)\n",
+    "start_gpu_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
+    "max_memory = round(gpu_stats.total_memory / 1024 / 1024 / 1024, 3)\n",
+    "print(f\"GPU = {gpu_stats.name}. Max memory = {max_memory} GB.\")\n",
+    "print(f\"{start_gpu_memory} GB of memory reserved.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer_stats = trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More memory stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "used_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
+    "used_memory_for_lora = round(used_memory - start_gpu_memory, 3)\n",
+    "used_percentage = round(used_memory / max_memory * 100, 3)\n",
+    "lora_percentage = round(used_memory_for_lora / max_memory * 100, 3)\n",
+    "print(f\"{trainer_stats.metrics['train_runtime']} seconds used for training.\")\n",
+    "print(\n",
+    "    f\"{round(trainer_stats.metrics['train_runtime']/60, 2)} minutes used for training.\"\n",
+    ")\n",
+    "print(f\"Peak reserved memory = {used_memory} GB.\")\n",
+    "print(f\"Peak reserved memory for training = {used_memory_for_lora} GB.\")\n",
+    "print(f\"Peak reserved memory % of max memory = {used_percentage} %.\")\n",
+    "print(f\"Peak reserved memory for training % of max memory = {lora_percentage} %.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Local Saving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save_pretrained_merged(\"merged_model\", tokenizer, save_method = \"merged_16bit\",)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python llama.cpp/convert_hf_to_gguf.py merged_model --outfile text2sql_8.gguf --outtype q8_0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ollama create unsloth_model_8 -f Modelfile"
    ]
   }
  ],
