Finetune completion. Has bug, will fix tmr

--- a/finetune/src/finetune.ipynb
+++ b/finetune/src/finetune.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🦥 Unsloth Zoo will now patch everything to make training faster!\n"
+      "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
+      "==((====))==  Unsloth 2025.2.4: Fast Llama patching. Transformers: 4.48.2.\n",
+      "   \\\\   /|    GPU: NVIDIA GeForce RTX 2060 SUPER. Max memory: 8.0 GB. Platform: Linux.\n",
+      "O^O/ \\_/ \\    Torch: 2.5.1. CUDA: 7.5. CUDA Toolkit: 12.1. Triton: 3.1.0\n",
+      "\\        /    Bfloat16 = FALSE. FA [Xformers = 0.0.29. FA2 = False]\n",
+      " \"-____-\"     Free Apache license: http://github.com/unslothai/unsloth\n",
+      "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n"
      ]
     }
    ],
@@ -100,9 +106,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Unsloth 2025.2.4 patched 28 layers with 28 QKV layers, 28 O layers and 28 MLP layers.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Use PEFT (Parameter-Efficient Fine-Tunning) on our selected model \n",
@@ -174,10 +188,7 @@
     "    ]\n",
     "    return {\"conversations\": conversation}\n",
     "\n",
-    "# Fixed the function name in the list comprehension\n",
     "data_temp = [convert_to_conversation(data) for data in dataset]\n",
-    "\n",
-    "# The structure needs to be modified since Dataset.from_dict expects a different format\n",
     "data_dict = {\n",
     "    \"conversations\": [item[\"conversations\"] for item in data_temp]\n",
     "}\n",
@@ -188,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,26 +214,40 @@
     "    convos = examples[\"conversations\"]\n",
     "    texts = [tokenizer.apply_chat_template(convo, tokenize = False, add_generation_prompt = False) for convo in convos]\n",
     "    return { \"text\" : texts, }\n",
-    "pass\n",
-    "\n",
-    "from datasets import load_dataset\n",
-    "dataset = load_dataset(dataset, split = \"train\")"
+    "pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'conversations': [[{'from': 'system', 'value': 'You are a helpful assistant that predicts the disease based on these symptoms.'}, {'from': 'human', 'value': 'Predict the disease based on these symptoms: itching,skin_rash,nodal_skin_eruptions,dischromic__patches'}, {'from': 'gpt', 'value': 'Fungal infection'}], [{'from': 'system', 'value': 'You are a helpful assistant that predicts the disease based on these symptoms.'}, {'from': 'human', 'value': 'Predict the disease based on these symptoms: skin_rash,nodal_skin_eruptions,dischromic__patches'}, {'from': 'gpt', 'value': 'Fungal infection'}], [{'from': 'system', 'value': 'You are a helpful assistant that predicts the disease based on these symptoms.'}, {'from': 'human', 'value': 'Predict the disease based on these symptoms: itching,nodal_skin_eruptions,dischromic__patches'}, {'from': 'gpt', 'value': 'Fungal infection'}], [{'from': 'system', 'value': 'You are a helpful assistant that predicts the disease based on these symptoms.'}, {'from': 'human', 'value': 'Predict the disease based on these symptoms: itching,skin_rash,dischromic__patches'}, {'from': 'gpt', 'value': 'Fungal infection'}], [{'from': 'system', 'value': 'You are a helpful assistant that predicts the disease based on these symptoms.'}, {'from': 'human', 'value': 'Predict the disease based on these symptoms: itching,skin_rash,nodal_skin_eruptions'}, {'from': 'gpt', 'value': 'Fungal infection'}]]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(dataset[:5])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Standardizing format: 100%|██████████| 2685/2685 [00:00<00:00, 28346.10 examples/s]\n",
+      "Map: 100%|██████████| 2685/2685 [00:00<00:00, 15894.56 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from unsloth.chat_templates import standardize_sharegpt\n",
     "\n",
@@ -232,18 +257,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'content': 'You are a helpful assistant that predicts the disease based on these symptoms.',\n",
+       "  'role': 'system'},\n",
+       " {'content': 'Predict the disease based on these symptoms: continuous_sneezing,shivering,chills,watering_from_eyes',\n",
+       "  'role': 'user'},\n",
+       " {'content': 'Allergy', 'role': 'assistant'}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset[5] [\"conversations\"] #  raw data for debugging or validation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<|begin_of_text|><|start_header_id|>system<|end_header_id|>\\n\\nCutting Knowledge Date: December 2023\\nToday Date: 26 July 2024\\n\\nYou are a helpful assistant that predicts the disease based on these symptoms.<|eot_id|><|start_header_id|>user<|end_header_id|>\\n\\nPredict the disease based on these symptoms: continuous_sneezing,shivering,chills,watering_from_eyes<|eot_id|><|start_header_id|>assistant<|end_header_id|>\\n\\nAllergy<|eot_id|>'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset[5][\"text\"] # verify that the formatting and preprocessing worked as expected."
    ]
@@ -257,9 +308,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map (num_proc=2): 100%|██████████| 2685/2685 [00:02<00:00, 1169.37 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from trl import SFTTrainer\n",
     "from transformers import TrainingArguments, DataCollatorForSeq2Seq\n",
@@ -296,9 +355,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 2685/2685 [00:00<00:00, 6718.97 examples/s]\n"
+     ]
+    }
+   ],
    "source": [
     "from unsloth.chat_templates import train_on_responses_only\n",
     "trainer = train_on_responses_only(\n",
@@ -317,18 +384,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<|begin_of_text|><|start_header_id|>system<|end_header_id|>\\n\\nCutting Knowledge Date: December 2023\\nToday Date: 26 July 2024\\n\\nYou are a helpful assistant that predicts the disease based on these symptoms.<|eot_id|><|start_header_id|>user<|end_header_id|>\\n\\nPredict the disease based on these symptoms: continuous_sneezing,shivering,chills,watering_from_eyes<|eot_id|><|start_header_id|>assistant<|end_header_id|>\\n\\nAllergy<|eot_id|>'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tokenizer.decode(trainer.train_dataset[5][\"input_ids\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'                                                                        \\n\\nAllergy<|eot_id|>'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "space = tokenizer(\" \", add_special_tokens = False).input_ids[0]\n",
     "tokenizer.decode([space if x == -100 else x for x in trainer.train_dataset[5][\"labels\"]])"
@@ -336,9 +425,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU = NVIDIA GeForce RTX 2060 SUPER. Max memory = 8.0 GB.\n",
+      "2.303 GB of memory reserved.\n"
+     ]
+    }
+   ],
    "source": [
     "#Show Computer memory stats \n",
     "gpu_stats = torch.cuda.get_device_properties(0)\n",
@@ -352,7 +450,178 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "==((====))==  Unsloth - 2x faster free finetuning | Num GPUs = 1\n",
+      "   \\\\   /|    Num examples = 2,685 | Num Epochs = 1\n",
+      "O^O/ \\_/ \\    Batch size per device = 2 | Gradient Accumulation steps = 4\n",
+      "\\        /    Total batch size = 8 | Total steps = 60\n",
+      " \"-____-\"     Number of trainable parameters = 24,313,856\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='35' max='60' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [35/60 01:39 < 01:15, 0.33 it/s, Epoch 0.10/1]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>6.091300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>5.305400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>5.841200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>6.584900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>4.793800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>3.935900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>3.169500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>1.818100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>1.529100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>0.920700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>1.381200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>0.572000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>0.817100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>0.492000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>0.855400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>0.310600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>1.205000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>1.398000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>0.927500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>0.835900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>21</td>\n",
+       "      <td>0.595600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22</td>\n",
+       "      <td>1.135000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>0.714000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>24</td>\n",
+       "      <td>1.224300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>0.110000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>0.344200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>27</td>\n",
+       "      <td>0.203400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>28</td>\n",
+       "      <td>0.442300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>29</td>\n",
+       "      <td>0.380800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>0.364800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>31</td>\n",
+       "      <td>0.988200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>32</td>\n",
+       "      <td>0.213400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33</td>\n",
+       "      <td>0.469300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trainer_stats = trainer.train()"
    ]
@@ -386,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_pretrained_merged(\"merged_model\", tokenizer, save_method = \"merged_16bit\",)\n"
+    "model.save_pretrained_merged(\"CareConnect_model\", tokenizer, save_method = \"merged_16bit\",)\n"
    ]
   },
   {
@@ -416,7 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python llama.cpp/convert_hf_to_gguf.py merged_model --outfile text2sql_8.gguf --outtype q8_0\n"
+    "!python llama.cpp/convert_hf_to_gguf.py CareConnect_model --outfile CareConnect.gguf --outtype q8_0\n"
    ]
   },
   {
@@ -425,7 +694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ollama create unsloth_model_8 -f Modelfile"
+    "!ollama create CareConnect -f Modelfile"
    ]
   }
  ],
