Python env crashes need fix

--- a/finetune/src/finetune.ipynb
+++ b/finetune/src/finetune.ipynb
@@ -243,8 +243,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Standardizing format: 100%|██████████| 2685/2685 [00:00<00:00, 28346.10 examples/s]\n",
-      "Map: 100%|██████████| 2685/2685 [00:00<00:00, 15894.56 examples/s]\n"
+      "Standardizing format: 100%|██████████| 2685/2685 [00:00<00:00, 42972.46 examples/s]\n",
+      "Map: 100%|██████████| 2685/2685 [00:00<00:00, 16082.80 examples/s]\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map (num_proc=2): 100%|██████████| 2685/2685 [00:02<00:00, 1169.37 examples/s]\n"
+      "Map (num_proc=2): 100%|██████████| 2685/2685 [00:01<00:00, 1376.12 examples/s]\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 2685/2685 [00:00<00:00, 6718.97 examples/s]\n"
+      "Map: 100%|██████████| 2685/2685 [00:00<00:00, 8058.03 examples/s] \n"
      ]
     }
    ],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -468,8 +468,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='35' max='60' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [35/60 01:39 < 01:15, 0.33 it/s, Epoch 0.10/1]\n",
+       "      <progress value='60' max='60' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [60/60 02:46, Epoch 0/1]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -489,83 +489,83 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>5.841200</td>\n",
+       "      <td>5.842800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>6.584900</td>\n",
+       "      <td>6.581100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>4.793800</td>\n",
+       "      <td>4.793200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>3.935900</td>\n",
+       "      <td>3.938100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>3.169500</td>\n",
+       "      <td>3.169800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>1.818100</td>\n",
+       "      <td>1.818600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
-       "      <td>1.529100</td>\n",
+       "      <td>1.528400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>0.920700</td>\n",
+       "      <td>0.919900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>11</td>\n",
-       "      <td>1.381200</td>\n",
+       "      <td>1.381400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>12</td>\n",
-       "      <td>0.572000</td>\n",
+       "      <td>0.572700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>13</td>\n",
-       "      <td>0.817100</td>\n",
+       "      <td>0.817600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>14</td>\n",
-       "      <td>0.492000</td>\n",
+       "      <td>0.494400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>15</td>\n",
-       "      <td>0.855400</td>\n",
+       "      <td>0.854100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>16</td>\n",
-       "      <td>0.310600</td>\n",
+       "      <td>0.310100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>17</td>\n",
-       "      <td>1.205000</td>\n",
+       "      <td>1.206900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>18</td>\n",
-       "      <td>1.398000</td>\n",
+       "      <td>1.398600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>19</td>\n",
-       "      <td>0.927500</td>\n",
+       "      <td>0.926900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>20</td>\n",
-       "      <td>0.835900</td>\n",
+       "      <td>0.836100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>21</td>\n",
-       "      <td>0.595600</td>\n",
+       "      <td>0.596200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22</td>\n",
-       "      <td>1.135000</td>\n",
+       "      <td>1.137000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>23</td>\n",
@@ -573,19 +573,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>24</td>\n",
-       "      <td>1.224300</td>\n",
+       "      <td>1.224200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>25</td>\n",
-       "      <td>0.110000</td>\n",
+       "      <td>0.109800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>26</td>\n",
-       "      <td>0.344200</td>\n",
+       "      <td>0.343700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>27</td>\n",
-       "      <td>0.203400</td>\n",
+       "      <td>0.202900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>28</td>\n",
@@ -593,23 +593,131 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>29</td>\n",
-       "      <td>0.380800</td>\n",
+       "      <td>0.380900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>30</td>\n",
-       "      <td>0.364800</td>\n",
+       "      <td>0.367700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>31</td>\n",
-       "      <td>0.988200</td>\n",
+       "      <td>0.990400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>32</td>\n",
-       "      <td>0.213400</td>\n",
+       "      <td>0.214100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>33</td>\n",
-       "      <td>0.469300</td>\n",
+       "      <td>0.469800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>34</td>\n",
+       "      <td>0.420100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35</td>\n",
+       "      <td>0.219000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36</td>\n",
+       "      <td>1.061200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>37</td>\n",
+       "      <td>0.863400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>38</td>\n",
+       "      <td>1.372200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39</td>\n",
+       "      <td>0.064100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>40</td>\n",
+       "      <td>0.541500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>41</td>\n",
+       "      <td>0.215100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>42</td>\n",
+       "      <td>0.334600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>43</td>\n",
+       "      <td>0.409100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>44</td>\n",
+       "      <td>0.301000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>45</td>\n",
+       "      <td>0.814700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>46</td>\n",
+       "      <td>0.476400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>47</td>\n",
+       "      <td>0.302300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>48</td>\n",
+       "      <td>0.213000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>49</td>\n",
+       "      <td>0.579000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50</td>\n",
+       "      <td>0.581500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>51</td>\n",
+       "      <td>0.622200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>52</td>\n",
+       "      <td>0.258900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>53</td>\n",
+       "      <td>0.205800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>54</td>\n",
+       "      <td>0.203900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>55</td>\n",
+       "      <td>0.276300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>56</td>\n",
+       "      <td>0.349800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>57</td>\n",
+       "      <td>0.584400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>58</td>\n",
+       "      <td>0.408300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>59</td>\n",
+       "      <td>0.206700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>60</td>\n",
+       "      <td>0.909300</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -635,10 +743,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "170.852 seconds used for training.\n",
+      "2.85 minutes used for training.\n",
+      "Peak reserved memory = 4.021 GB.\n",
+      "Peak reserved memory for training = 1.718 GB.\n",
+      "Peak reserved memory % of max memory = 50.262 %.\n",
+      "Peak reserved memory for training % of max memory = 21.475 %.\n"
+     ]
+    }
+   ],
    "source": [
+    "import torch \n",
+    "\n",
     "used_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
     "used_memory_for_lora = round(used_memory - start_gpu_memory, 3)\n",
     "used_percentage = round(used_memory / max_memory * 100, 3)\n",
@@ -657,9 +780,20 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
-    "import torch\n",
     "torch.cuda.empty_cache()"
    ]
   },
@@ -674,7 +808,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsloth: Merging 4bit and LoRA weights to 16bit...\n",
+      "Unsloth: Will use up to 0.0 out of 7.69 RAM for saving.\n",
+      "Unsloth: Saving model... This might take 5 minutes ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 54%|█████▎    | 15/28 [00:00<00:00, 36.92it/s]\n",
+      "We will save to Disk and not RAM now.\n",
+      "100%|██████████| 28/28 [00:03<00:00,  7.08it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unsloth: Saving tokenizer... Done.\n"
+     ]
+    }
+   ],
    "source": [
     "model.save_pretrained_merged(\"CareConnect_model\", tokenizer, save_method = \"merged_16bit\",)\n"
    ]
