readme.md & little tweeks to finetine script

--- a/finetune/src/finetune.ipynb
+++ b/finetune/src/finetune.ipynb
@@ -1162,6 +1162,7 @@
       "source": [
         "from huggingface_hub import login\n",
         "#put your login stuff here\n",
+        "#login(\"Your token here\")\n",
         "model.save_pretrained(\"careconnect-llama3.2-3b\")\n",
         "tokenizer.save_pretrained(\"careconnect-llama3.2-3b\")\n"
       ]
@@ -2136,8 +2137,6 @@
       ],
       "source": [
         "import os\n",
-        "from huggingface_hub import login\n",
-        "#put your login stuff here\n",
         "# Upload to Hugging Face\n",
         "model.push_to_hub(\"careconnect-llama3.2-3b\",token = os.getenv(\"HUGGINGFACE_TOKEN\"))\n",
         "tokenizer.push_to_hub(\"careconnect-llama3.2-3b\",token = os.getenv(\"HUGGINGFACE_TOKEN\"))\n",
@@ -2157,7 +2156,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "unsloth_env",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
