--- a/finetune/src/finetuneSnowflake.ipynb
+++ b/finetune/src/finetuneSnowflake.ipynb
@@ -24,12 +24,12 @@
    "version": "3.12.8"
   },
   "lastEditStatus": {
-   "notebookId": "2awc7tslnm3udm4gbqaj",
+   "notebookId": "xi2kyfw2tcmg66br4pli",
    "authorId": "8831210463455",
    "authorName": "JWADE",
    "authorEmail": "jwade23@pvamu.edu",
-   "sessionId": "921e7b53-b379-4831-90ae-08d97673640b",
-   "lastEditTime": 1742237420725
+   "sessionId": "5264cedf-7158-4654-9824-71251ace0fda",
+   "lastEditTime": 1742259104307
   },
   "vscode": {
    "interpreter": {
@@ -8021,7 +8021,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": "from unsloth import FastModel\nimport torch\nimport transformers\n\nfourbit_models = [\n    # 4bit dynamic quants for superior accuracy and low memory use\n    \"unsloth/gemma-3-1b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-4b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-12b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-27b-it-unsloth-bnb-4bit\",\n\n    # Other popular models!\n    \"unsloth/Llama-3.1-8B\",\n    \"unsloth/Llama-3.2-3B\",\n    \"unsloth/Llama-3.3-70B\",\n    \"unsloth/mistral-7b-instruct-v0.3\",\n    \"unsloth/Phi-4\",\n] # More models at https://huggingface.co/unsloth\n\nmodel, tokenizer = FastModel.from_pretrained(\n    model_name = \"unsloth/gemma-3-4b-it\",\n    max_seq_length = 2048, # Choose any for long context!\n    load_in_4bit = True,  # 4 bit quantization to reduce memory\n    load_in_8bit = False, # [NEW!] A bit more accurate, uses 2x memory\n    full_finetuning = False, # [NEW!] We have full finetuning now!\n    # token = \"hf_...\", # use one if using gated models\n)"
+   "source": "from unsloth import FastModel\nimport torch\nimport transformers\n\nfourbit_models = [\n    # 4bit dynamic quants for superior accuracy and low memory use\n    \"unsloth/gemma-3-1b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-4b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-12b-it-unsloth-bnb-4bit\",\n    \"unsloth/gemma-3-27b-it-unsloth-bnb-4bit\",\n\n    # Other popular models!\n    \"unsloth/Llama-3.1-8B\",\n    \"unsloth/Llama-3.2-3B\",\n    \"unsloth/Llama-3.3-70B\",\n    \"unsloth/mistral-7b-instruct-v0.3\",\n    \"unsloth/Phi-4\",\n] # More models at https://huggingface.co/unsloth\n\nmodel, tokenizer = FastModel.from_pretrained(\n    model_name = \"unsloth/gemma-3-4b-it\",\n    max_seq_length = 2048, # Choose any for long context!\n    attn_implementation=\"eager\",\n    load_in_4bit = True,  # 4 bit quantization to reduce memory\n    load_in_8bit = False, # [NEW!] A bit more accurate, uses 2x memory\n    full_finetuning = False, # [NEW!] We have full finetuning now!\n    # token = \"hf_...\", # use one if using gated models\n)"
   },
   {
    "cell_type": "markdown",
@@ -8057,7 +8057,7 @@
      ]
     }
    ],
-   "source": "\n# Use PEFT (Parameter-Efficient Fine-Tunning) on our selected model\nmodel = FastModel.get_peft_model(\n    model,\n    finetune_vision_layers     = False, # Turn off for just text!\n    finetune_language_layers   = True,  # Should leave on!\n    finetune_attention_modules = True,  # Attention good for GRPO\n    finetune_mlp_modules       = True,  # SHould leave on always!\n\n    r = 16,           # Larger = higher accuracy, but might overfit\n    lora_alpha = 16,  # Recommended alpha == r at least\n    lora_dropout = 0,\n    bias = \"none\",\n    random_state = 3407,\n)"
+   "source": "\n# Use PEFT (Parameter-Efficient Fine-Tunning) on our selected model\nmodel = FastModel.get_peft_model(\n    model,\n    finetune_vision_layers     = False, # Turn off for just text!\n    finetune_language_layers   = True,  # Should leave on!\n    finetune_attention_modules = True,  # Attention good for GRPO\n    finetune_mlp_modules       = True,  # SHould leave on always!\n\n    r = 8,           # Larger = higher accuracy, but might overfit\n    lora_alpha = 8,  # Recommended alpha == r at least\n    lora_dropout = 0,\n    bias = \"none\",\n    random_state = 3407,\n)"
   },
   {
    "cell_type": "markdown",
@@ -8118,9 +8118,7 @@
      ]
     }
    ],
-   "source": [
-    "print(dataset[:5])\n"
-   ]
+   "source": "print(dataset[:5])"
   },
   {
    "cell_type": "code",
@@ -8399,7 +8397,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": "from trl import SFTTrainer, SFTConfig\nfrom transformers import TrainingArguments, DataCollatorForSeq2Seq\nfrom unsloth import is_bfloat16_supported\n\ntrainer = SFTTrainer(\n    model = model,\n    tokenizer = tokenizer,\n    train_dataset = dataset,\n    eval_dataset = None, # Can set up evaluation!\n    dataset_num_proc = 1,\n    args = SFTConfig(\n        dataset_text_field = \"text\",\n        per_device_train_batch_size = 2,\n        gradient_accumulation_steps = 4, # Use GA to mimic batch size!\n        warmup_steps = 5,\n        #num_train_epochs = 1, # Set this for 1 full training run.\n        max_steps = 500,\n        learning_rate = 2e-5, # Reduce to 2e-5 for long training runs\n        logging_steps = 1,\n        optim = \"adamw_8bit\",\n        weight_decay = 0.01,\n        lr_scheduler_type = \"linear\",\n        seed = 3407,\n        report_to = \"none\", # Use this for WandB etc\n    ),\n)"
+   "source": "from trl import SFTTrainer, SFTConfig\nfrom transformers import TrainingArguments, DataCollatorForSeq2Seq\nfrom unsloth import is_bfloat16_supported\n\ntrainer = SFTTrainer(\n    model = model,\n    tokenizer = tokenizer,\n    train_dataset = dataset,\n    eval_dataset = None, # Can set up evaluation!\n    dataset_num_proc = 1,\n    args = SFTConfig(\n        dataset_text_field = \"text\",\n        per_device_train_batch_size = 1,\n        gradient_accumulation_steps = 8, # Use GA to mimic batch size!\n        gradient_checkpointing=True,\n        warmup_steps = 5,\n        num_train_epochs = 1, # Set this for 1 full training run.\n        #max_steps = 500,\n        learning_rate = 2e-5, # Reduce to 2e-5 for long training runs\n        logging_steps = 1,\n        optim = \"adamw_torch\",\n        weight_decay = 0.01,\n        lr_scheduler_type = \"linear\",\n        seed = 3407,\n        report_to = \"none\", # Use this for WandB etc\n    ),\n)"
   },
   {
    "cell_type": "code",
@@ -8499,9 +8497,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "tokenizer.decode(trainer.train_dataset[5][\"input_ids\"])"
-   ]
+   "source": "tokenizer.decode(trainer.train_dataset[100][\"input_ids\"])"
   },
   {
    "cell_type": "code",
